fix about page green button contrast

--- a/css/about.scss
+++ b/css/about.scss
@@ -60,7 +60,7 @@
 
 	.about-button {
 		background: white !important;
-		color: #76c944 !important;
+		color: #22a831 !important;
 	}
 }
 
